Home page design updates to be consistent with case studies. Replaced stock imagery with real photo's for electrify case study.

--- a/athlete.html
+++ b/athlete.html
@@ -14,15 +14,18 @@
 
 <body>
   <header>
-    <a class="logo morning afternoon evening" href="index.html">Matthew Avery Braun Soule</a>
+    <!-- <a class="logo morning afternoon evening" href="index.html">Matthew Avery Braun Soule</a> -->
     <a href="index.html" class="contact back morning afternoon evening">Back</a>
   </header>
+
+  <h1 class="title">Athlete Case Study</h1>
+  <h1 class="subtitle">Coming Soon!</h1>
 
   <section class="links">
     <h1>Learn more</h1>
     <div class="container3">
-      <a class="contact footer morning afternoon evening" href="assets/documents/resume.pdf" download>Résumé</a>
-      <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/">Linkedin</a>
+      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" download target="_blank">Résumé</a>
+      <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
       <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
     </div>
   </section>
