--- a/electrify.html
+++ b/electrify.html
@@ -24,15 +24,16 @@
 
   <section class="spacing">
     <h1 class="section">On this page</h1>
-    <a href="electrify.html#problem" class="text nav morning afternoon evening">1. Problem</a>
-    <a href="electrify.html#approach" class="text nav morning afternoon evening">2. Approach</a>
-    <a href="electrify.html#theStartingPoint" class="text nav morning afternoon evening">3. The starting point</a>
-    <a href="electrify.html#userRequirements" class="text nav morning afternoon evening">4. User requirements</a>
-    <a href="electrify.html#engineeringSpecifications" class="text nav morning afternoon evening">5. Engineering specifications</a>
-    <a href="electrify.html#budget" class="text nav morning afternoon evening">6. Budget</a>
-    <a href="electrify.html#vehicleCriteria" class="text nav morning afternoon evening">7. Vehicle criteria</a>
-    <a href="electrify.html#teardown" class="text nav morning afternoon evening">8. Donor vehicle teardown</a>
-    <a href="electrify.html#buildProcess" class="text nav morning afternoon evening">9. Build process:</a>
+    <a href="electrify.html#problem" class="nav morning afternoon evening">1. Problem</a>
+    <a href="electrify.html#approach" class="nav morning afternoon evening">2. Approach</a>
+    <a href="electrify.html#theStartingPoint" class="nav morning afternoon evening">3. The starting point</a>
+    <a href="electrify.html#userRequirements" class="nav morning afternoon evening">4. User requirements</a>
+    <a href="electrify.html#engineeringSpecifications" class="nav morning afternoon evening">5. Engineering specifications</a>
+    <a href="electrify.html#budget" class="nav morning afternoon evening">6. Budget</a>
+    <a href="electrify.html#vehicleCriteria" class="nav morning afternoon evening">7. Vehicle criteria</a>
+    <a href="electrify.html#teardown" class="nav morning afternoon evening">8. Donor vehicle teardown</a>
+    <a href="electrify.html#buildProcess" class="nav morning afternoon evening">9. Build process</a>
+<!--
     <div class="container5">
       <a href="electrify.html#motorSelection" class="buildProcess nav morning afternoon evening">&nbsp;Motor selection ·</a>
       <a href="electrify.html#powertrainInstallation" class="buildProcess nav morning afternoon evening">&nbsp;Powertrain installation ·</a>
@@ -55,11 +56,12 @@
       <a href="electrify.html#dash" class="buildProcess nav morning afternoon evening">&nbsp;Dashboard ·</a>
       <a href="electrify.html#assembly" class="buildProcess nav morning afternoon evening">&nbsp;Final assembly ·</a>
     </div>
-    <a href="electrify.html#final" class="text nav morning afternoon evening"> 10. Final product</a>
-    <a href="electrify.html#limitations" class="text nav morning afternoon evening"> 11. Limitations</a>
-    <a href="electrify.html#learnings" class="text nav morning afternoon evening"> 12. Learnings</a>
-    <a href="electrify.html#acknowledgments" class="text nav morning afternoon evening"> 13. Acknowledgments</a>
-    <a href="electrify.html#nextUp" class="text nav morning afternoon evening"> 14. Future interests</a>
+   -->
+    <a href="electrify.html#final" class="nav morning afternoon evening"> 10. Final product</a>
+    <a href="electrify.html#limitations" class="nav morning afternoon evening"> 11. Limitations</a>
+    <a href="electrify.html#learnings" class="nav morning afternoon evening"> 12. Learnings</a>
+    <a href="electrify.html#acknowledgments" class="nav morning afternoon evening"> 13. Acknowledgments</a>
+    <a href="electrify.html#nextUp" class="nav morning afternoon evening"> 14. Future interests</a>
   </section>
 
   <section class="spacing">
@@ -411,7 +413,7 @@
   <section class="links">
     <h1>Learn more</h1>
     <div class="container3">
-      <a class="contact footer morning afternoon evening" href="assets/documents/resume.pdf" target="_blank" download>Résumé</a>
+      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" target="_blank" download>Résumé</a>
       <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
       <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
     </div>
