--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <body>
     <header class="scroll">
-      <a class="logo morning afternoon evening" href="index.html">Matthew Avery Braun Soule</a>
       <a class="welcome morning afternoon evening" id="greeting"></a>
+      <a class="logo morning afternoon evening" href="index.html">M. Avery B. Soule</a>
     </header>
 
     <p class="statement">I have a passion for exploring challenging problem spaces to create products that truly matter.</p>
@@ -24,7 +24,8 @@
       <a href="athlete.html">
         <img class="cover" src="assets/images/cover1.png">
         <div class="overlay color1"></div>
-        <h2>Enabling athletic lifestyles for busy millennials</h2>
+        <h2 class="year">2019</h2>
+        <h2>Personal endeavor · Enabling athletic lifestyles for busy millennials</h2>
       </a>
     </div>
 
@@ -32,15 +33,17 @@
       <a href="ods.html">
       <img class="cover" src="assets/images/cover2.png">
       <div class="overlay color2"></div>
-      <h2>Creating simpler, faster, and better services for Ontarian's</h2>
+      <h2 class="year">2019</h2>
+      <h2>Product designer at the Ontario Digital Service · Creating better government services</h2>
       </a>
     </div>
 
     <div class="container">
       <a href="electrify.html">
-        <img class="cover" src="assets/images/cover3.png">
+        <img class="cover" src="assets/images/cover3.jpg">
         <div class="overlay color3"></div>
-        <h2>Building an all-electric daily driver</h2>
+        <h2 class="year">2016</h2>
+        <h2>Passion project · Building an all-electric daily driver</h2>
       </a>
     </div>
 
@@ -133,8 +136,8 @@
     <section class="links">
       <h1>Learn more</h1>
       <div class="container3">
-        <a class="contact footer morning afternoon evening" href="assets/documents/resume.pdf" download>Résumé</a>
-        <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/">Linkedin</a>
+        <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" download target="_blank">Résumé</a>
+        <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
         <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
       </div>
     </section>
