Placing electrify case study first, placing ODS under additional experience and disabling the athletics based case study as it is not complete

--- a/athlete.html
+++ b/athlete.html
@@ -18,8 +18,28 @@
     <a href="index.html" class="contact back morning afternoon evening">Back</a>
   </header>
 
-  <h1 class="title">Athlete Case Study</h1>
-  <h1 class="subtitle">Coming Soon!</h1>
+  <h1 class="title">Stamina</h1>
+  <h1 class="subtitle">Enabling athletic lifestyles for busy millennials</h1>
+
+  <section class="spacing">
+    <h1 class="section">On this page</h1>
+    <a href="electrify.html#intro" class="nav morning afternoon evening">1. Introduction</a>
+    <a href="electrify.html#problem" class="nav morning afternoon evening">2. Problem space</a>
+    <a href="electrify.html#approach" class="nav morning afternoon evening">3. Approach</a>
+    <a href="electrify.html#research" class="nav morning afternoon evening">4. Research</a>
+    <a href="electrify.html#empathy" class="nav morning afternoon evening">5. Empathy</a>
+    <a href="electrify.html#nextSteps" class="nav morning afternoon evening">6. Next steps</a>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="intro">Introduction</h1>
+    <p class="text">One of my big passions in life is health and fitness. We make so many decisions each and every day that together compound to determine where our health and fitness stands. With some time to dedicate to a passion project, I thought deeply about what aspect of health and fitness I could make an impact on.</p>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="problem">Problem</h1>
+    <p class="text">While transitioning into university life not too long ago, I noticed an interesting widespread pattern amongst my peers.</p>
+  </section>
 
   <section class="links">
     <h1>Learn more</h1>
