--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
     <p class="statement">I have a passion for exploring challenging problem spaces to create products that truly matter.</p>
 
     <div class="container">
+      <a href="electrify.html">
+        <img class="cover" src="assets/images/cover3.jpg">
+        <div class="overlay color3"></div>
+        <h2 class="year">2016</h2>
+        <h2>Passion project · Building an all-electric daily driver</h2>
+      </a>
+    </div>
+
+    <!-- <div class="container">
       <a href="athlete.html">
         <img class="cover" src="assets/images/cover1.png">
         <div class="overlay color1"></div>
         <h2 class="year">2019</h2>
-        <h2>Personal endeavor · Enabling athletic lifestyles for busy millennials</h2>
+        <h2>Passion project · Enabling athletic lifestyles for busy millennials</h2>
       </a>
-    </div>
+    </div> -->
 
     <div class="container">
       <a href="ods.html">
@@ -38,17 +47,16 @@
       </a>
     </div>
 
-    <div class="container">
-      <a href="electrify.html">
-        <img class="cover" src="assets/images/cover3.jpg">
-        <div class="overlay color3"></div>
-        <h2 class="year">2016</h2>
-        <h2>Passion project · Building an all-electric daily driver</h2>
-      </a>
-    </div>
-
     <section>
       <h1>Additional work</h1>
+
+      <div class="container2">
+        <div class="experience">
+          <p class="date">2019</p>
+          <h3 class="experience">Ontario Digital Service</h3>
+          <p class="experience">Found my groove as a product designer while leading a multidisciplinary team through weekly adapted Google Sprints to help redesign three major services.</p>
+        </div>
+      </div>
 
       <div class="container2">
         <div class="experience">
@@ -77,7 +85,7 @@
         <div class="experience">
           <p class="date">2016</p>
           <h3 class="experience">Rhythm</h3>
-          <p class="experience">Co-designed a smart home lighting system to help stimulate natural circadian rhythms (4 month design challenge).</p>
+          <p class="experience">Co-designed a smart home lighting system that influences the user’s circadian rhythm to encourage a healthy sleep schedule (4 month design challenge).</p>
         </div>
       </div>
 
@@ -111,7 +119,7 @@
         <div class="experience">
           <p class="date">2019</p>
           <h3 class="experience">Systems Design Engineering 3A</h3>
-          <p class="experience">Studying Systems Design Engineering at the University of Waterloo from May to August. This will be my 3A term (first semester of third date).</p>
+          <p class="experience">Studying Systems Design Engineering at the University of Waterloo from May to August. This will be my 3A term (first semester of third year).</p>
         </div>
       </div>
 
