--- a/ods.html
+++ b/ods.html
@@ -18,8 +18,8 @@
     <a href="index.html" class="contact back morning afternoon evening">Back</a>
   </header>
 
-  <h1 class="title">Product Design at the Ontario Digital Service</h1>
-  <h1 class="subtitle">Coming Soon!</h1>
+  <h1 class="title">Coming Soon!</h1>
+  <h1 class="subtitle">Improving the military family relocation experience</h1>
 
   <section class="links">
     <h1>Learn more</h1>
