Stamina project log added, favicon added, minor grammatical fixes on Electrify case study

--- a/athlete.html
+++ b/athlete.html
@@ -8,6 +8,10 @@
   <title>Matthew Avery Braun Soule</title>
   <link rel="stylesheet" href="style.css">
   <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <!-- All visible content is contained in the body section -->
@@ -20,30 +24,95 @@
 
   <h1 class="title">Stamina</h1>
   <h1 class="subtitle">Enabling athletic lifestyles for busy millennials</h1>
+  <img class="main" src="assets/images/stamina/1.jpg">
 
   <section class="spacing">
     <h1 class="section">On this page</h1>
-    <a href="electrify.html#intro" class="nav morning afternoon evening">1. Introduction</a>
-    <a href="electrify.html#problem" class="nav morning afternoon evening">2. Problem space</a>
-    <a href="electrify.html#approach" class="nav morning afternoon evening">3. Approach</a>
-    <a href="electrify.html#research" class="nav morning afternoon evening">4. Research</a>
-    <a href="electrify.html#empathy" class="nav morning afternoon evening">5. Empathy</a>
-    <a href="electrify.html#nextSteps" class="nav morning afternoon evening">6. Next steps</a>
+    <a href="athlete.html#motivation" class="nav morning afternoon evening">1. Motivation</a>
+    <a href="athlete.html#problem" class="nav morning afternoon evening">2. Problem space</a>
+    <a href="athlete.html#bias" class="nav morning afternoon evening">3. Addressing cognitive bias</a>
+    <a href="athlete.html#speech" class="nav morning afternoon evening">4. King's speech</a>
+    <a href="athlete.html#researchQuestions" class="nav morning afternoon evening">5. Research questions</a>
+    <a href="athlete.html#researchMethods" class="nav morning afternoon evening">6. Research methods</a>
+    <a href="athlete.html#interviewGuide" class="nav morning afternoon evening">7. Interview guide</a>
+    <a href="athlete.html#facilitation" class="nav morning afternoon evening">8. Facilitation</a>
+    <a href="athlete.html#nextSteps" class="nav morning afternoon evening">9. Next steps</a>
   </section>
 
   <section class="spacing">
-    <h1 class="section" id="intro">Introduction</h1>
-    <p class="text">One of my big passions in life is health and fitness. We make so many decisions each and every day that together compound to determine where our health and fitness stands. With some time to dedicate to a passion project, I thought deeply about what aspect of health and fitness I could make an impact on.</p>
+    <h1 class="section" id="motivation">Motivation</h1>
+    <p class="text">One of my steady passions in life has been striving for an evermore athletic and healthy lifestyle. I find it fascinating how we make so many little decisions each and every day that together, compound to determine where our health and fitness stands. This project will focus on the physical activity aspect of health and fitness.</p>
   </section>
 
   <section class="spacing">
-    <h1 class="section" id="problem">Problem</h1>
-    <p class="text">While transitioning into university life not too long ago, I noticed an interesting widespread pattern amongst my peers.</p>
+    <h1 class="section" id="problem">Problem space</h1>
+    <p class="text">Starting out this project, I was interested in understanding the role athletics play in an undergrad's lifestyle. From my (still frosted) window into the problem space, I found it particularly interesting observing how my peers coped with drastic changes in their lives such as moving to university, to various internships, and back again. I noticed changes in their athletic agenda, and with it, frustrations trying to find a balanced lifestyle; something I related strongly to in my own life. I set out to better understand the undergrad and intern’s athletic experience with the objective to find a specific problem space I could make a difference in.</p>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="bias">Addressing cognitive bias</h1>
+    <p class="text">To begin my understanding of a new problem space, I find addressing bias immediately helps me get into a beginners mindset. King’s Speech is an activity I came up with to help me avoid <a class="embededLink" target="_blank" href="https://uxdesign.cc/cognitive-biases-you-need-to-be-familiar-with-as-a-researcher-c482c9ee1d49">confirmation</a> and <a class="embededLink" target="_blank" href="https://uxdesign.cc/cognitive-biases-you-need-to-be-familiar-with-as-a-researcher-c482c9ee1d49">selection bias</a>.</p>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="speech">King's speech</h1>
+    <p class="text">Activity: In the constraints of this exercise, get in the mindset that you are an expert, your opinion is very important, everyone wants to hear what you have to say. Spend 5-10 min and write about the perspectives you hold and the unique experience you have had regarding the problem space you are exploring. Write your King’s speech. <br><br> Purpose: If you’re heavily ingrained in the problem space you're working on, it’s all too easy to have bias creep into your decisions. King’s speech allows you to get familiar with your perspectives and understand where your bias may lie. After completing this exercise, I find it easier to confront myself and make sure I’m making decisions based on information I’ve learned about my users, rather than my own experience. It’s also a great reminder to consider how other types of bias may influence my design process!</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/2.jpg">
+    </section>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="researchQuestions">Research questions</h1>
+    <p class="text">With a firm grasp on my own perspectives, I turned to learning about how others experience this problem space. Below is a list of research questions I saw as being important to explore further. Not to be confused with interview questions, research questions are used to capture what you want to learn about but does not indicate how you are going to go about getting your answers.</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/3.jpg">
+    </section>
+  </section>
+
+
+  <section class="spacing">
+    <h1 class="section" id="researchMethods">Research methods</h1>
+    <p class="text">Each research question was then considered to determine the best method of further investigating them. Let’s look at a few examples:</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/4.jpg">
+    </section>
+    <p class="text">This question is likely a well-researched area that has been explored using a scientific approach. Questions of this nature were clustered together to be investigated further using existing research.</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/5.jpg">
+    </section>
+    <p class="text">In contrast to the previous example, this question is very specific to the problem space being investigated and requires a detailed understanding of the users mental model. Questions with these properties were clustered together to be further investigated through exploratory interviews. Interviews of this style allow for individualized prompts to gain a thorough understanding of each interviewees perspective.</p>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="interviewGuide">Interview guide</h1>
+    <p class="text">Organizing and leading user interviews is an acquired skill, while on the surface it may seem simple, there’s a lot that goes into making an effective interview. My preparation started with turning research questions into interview questions. A large focus was placed on creating questions that would prompt conversations about each topic without leading the interviewee. The list of questions was then ordered to form an interview guide, follow up questions were created, and most importantly, I spent some time to ensure I truly understood what I wanted to learn about from each prompt.</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/6.jpg">
+    </section>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="facilitation">Facilitation</h1>
+    <p class="text">In terms of interviewee interaction, from my first recruitment message all the way through the interview itself, I focused on two things, developing rapport and avoiding biasing the interviewee. It’s a tricky line to nail both, but through a lot of practice and self-reflection, I am proud of how my skills have developed in this area. After each session, I scored myself on how well I performed in 12 key areas identified by the Nielsen Norman Group’s article on <a class="embededLink" target="_blank" href="https://www.nngroup.com/articles/user-interviews/">user interviews</a>.</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/7.jpg">
+    </section>
+    <p class="text">To me, user research and prototype testing methods are some of the most interesting tools used in a typical design process. You get to uncover how other people with their own unique experiences and mental models experience something with a fresh mind; it rarely comes without surprises and new perspectives that help create a better solution.</p>
+  </section>
+
+  <section class="spacing">
+    <h1 class="section" id="nextSteps">Next steps</h1>
+    <p class="text">In my first round of interviews, I completed 10 exploratory interviews with a diverse range of athletically involved undergrads. I am currently working to take notes on each sessions recording. <br><br> While only covering the initial parts of my design process, I hope this project log has provided some insight into how I approach large challenging problem spaces. I am excited to continue this project and see where it leads me. Currently, on my agenda I am planning to: <br><br> 1. Explore relevant data from studies to add quantitative answers to related research questions. <br> 2. Use affinity mapping to identify trends and patterns in my interview notes. <br> 3. Create “How Might We” statements based off of discovered friction points. <br> 4. Use a problem selection framework to help identify problem’s that are important to my target group but have a lack of effective solutions.</p>
+    <section class="spacing">
+      <img class="secondary" src="assets/images/stamina/8.jpg">
+    </section>
   </section>
 
   <section class="links">
     <h1>Learn more</h1>
     <div class="container3">
+      <!-- <a class="contact footer morning afternoon evening" href="electrify.html">Electrify · Case Study</a> -->
       <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" download target="_blank">Résumé</a>
       <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
       <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
