--- a/electrify.html
+++ b/electrify.html
@@ -8,6 +8,10 @@
   <title>Matthew Avery Braun Soule</title>
   <link rel="stylesheet" href="style.css">
   <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <!-- All visible content is contained in the body section -->
@@ -66,7 +70,7 @@
 
   <section class="spacing">
     <h1 class="section" id="problem">Problem</h1>
-    <p class="text">When beginning this project, the automotive scene looked very different then it does today. In terms of mass produced electric vehicles, the low-mid budget customer had a severe shortage of affordable zero emission vehicle options.</p>
+    <p class="text">When beginning this project, the automotive scene looked very different than it does today. In terms of mass produced electric vehicles, the low to mid budget customer had a severe shortage of affordable zero emission vehicle options.</p>
   </section>
 
   <section class="spacing">
@@ -75,7 +79,7 @@
 
   <section class="spacing">
     <h1 class="section" id="approach">Approach</h1>
-    <p class="text">Without many commercial options, I landed on the idea of converting an internal combustion production vehicle into an all-electric vehicle. My decision was based on three benefits tied to this solution:</p>
+    <p class="text">Without many commercial options, I landed on the idea of converting a combustion powered vehicle into an all-electric. My decision was based on three benefits tied to this solution:</p>
   </section>
 
   <section class="spacing">
@@ -84,7 +88,7 @@
 
   <section class="spacing">
     <h1 class="section" id="theStartingPoint">The starting point</h1>
-    <p class="text">Converting a vehicle requires an excellent understanding of how each vehicle system works. Don’t get me wrong, I drooled over car magazines growing up but I had no idea how they worked when it came down to the details. Nearly the first quarter of the project was spent developing a solid foundation of knowledge.</p>
+    <p class="text">Converting a vehicle requires an excellent understanding of how each vehicle system works. Don’t get me wrong, I drooled over car magazines growing up but I had no idea how they worked when it came down to the fine details. Nearly the first quarter of the project was spent developing a solid foundation of knowledge.</p>
   </section>
 
   <section class="spacing">
@@ -93,7 +97,7 @@
 
   <section class="spacing">
     <h1 class="section" id="userRequirements">User requirements</h1>
-    <p class="text">By analyzing my families driving habits through ethnographic field studies and casual interviews, I learned what we saw as being important in a vehicle.</p>
+    <p class="text">By analyzing my families (the end users) driving habits through ethnographic field studies and casual interviews, I learned what we saw as being important in a vehicle.</p>
   </section>
 
   <section class="spacing">
@@ -120,7 +124,7 @@
 
   <section class="spacing">
     <h1 class="section" id="vehicleCriteria">Vehicle criteria</h1>
-    <p class="text">I put an emphasis on selecting a car that was small and light to reduce the size and power (and thus price) of the drivetrain components needed to achieve the performance goals outlined. In the realm of smaller cars, I narrowed in on the latest generation Toyota Celica. Despite being quite small, Celica’s have 4 seats, a large trunk and engine bay to distribute the battery packs weight, and are built in a simple and reliable way.</p>
+    <p class="text">I put an emphasis on selecting a car that was small and light to reduce the size and power (and thus price) of the drivetrain components needed to achieve the performance goals outlined. In the realm of smaller cars, I narrowed in on the latest generation Toyota Celica. Despite being quite small, Celica’s have 4 seats, a large trunk and engine bay to distribute the battery pack's weight, and are built in a simple and reliable way.</p>
   </section>
 
   <section class="spacing">
@@ -128,12 +132,12 @@
   </section>
 
   <section id="buildProcess" class="spacing">
-    <h4>The build process</h4>
+    <h4>Build process</h4>
   </section>
 
   <section class="spacing">
     <h1 class="section" id="teardown">Donor vehicle teardown</h1>
-    <p class="text">I had a base car to work off of, now what? To make room for the new electric drivetrain I removed the stock Toyota ZZ1 engine, engine control unit, radiators, exhaust, and fuel system. Unfortunately, that’s a little more complicated then it sounds. Combustion engines typically provide power through a serpentine belt to a number of different systems such as your vehicles power brakes, power steering, and cabin heating system. Each system that was disrupted, was then dismantled, analyzed and taken on as a separate design challenge.</p>
+    <p class="text">I had a base car to work off of, now what? To make room for the new electric drivetrain I removed the stock Toyota ZZ1 engine, ECU (engine control unit), radiators, exhaust, and fuel system. Unfortunately, that’s a little more complicated then it sounds. Combustion engines typically provide power through a serpentine belt to a number of different systems such as your vehicle's power brakes, power steering, and cabin heating system. Each disrupted system was then dismantled, analyzed and taken on as a separate design challenge.</p>
   </section>
 
   <section class="spacing">
@@ -392,7 +396,7 @@
 
   <section class="spacing">
     <h1 id="limitations" class="section">Limitations</h1>
-    <p class="text">Did I build a legitimate competitor to current all-electric production vehicles? No, this vehicle is far from production quality. Due to the sheer workload required to complete this project, I was unable to work through enough iterations on my designs, master the trades required to produce ultra aesthetic components, and spend the necessary time on each design challenge to nail the craftsmanship of this product. Overall, the focus of this project was placed on functionality over the aesthetic properties to ensure a working product was reached.</p>
+    <p class="text">Did I build a legitimate competitor to current all-electric production vehicles? No, this vehicle is far from production quality. Due to the sheer workload required to complete this project, I was unable to work through enough iterations on my designs, master the trades required to produce ultra aesthetic components, and spend the necessary time on each design challenge to nail the craftsmanship of this product. Overall, the focus of this project was placed on functionality over the aesthetic properties to ensure a working product was reached within the budget constraints.</p>
   </section>
 
   <section class="spacing">
