--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Matthew Avery Braun Soule</title>
     <link rel="stylesheet" href="style.css">
     <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
 
 <!-- All visible content is contained in the body section -->
@@ -29,15 +33,16 @@
       </a>
     </div>
 
-    <!-- <div class="container">
+    <div class="container">
       <a href="athlete.html">
-        <img class="cover" src="assets/images/cover1.png">
+        <img class="cover" src="assets/images/cover1.jpg">
         <div class="overlay color1"></div>
         <h2 class="year">2019</h2>
         <h2>Passion project · Enabling athletic lifestyles for busy millennials</h2>
       </a>
-    </div> -->
+    </div>
 
+<!--
     <div class="container">
       <a href="ods.html">
       <img class="cover" src="assets/images/cover2.png">
@@ -45,7 +50,7 @@
       <h2 class="year">2019</h2>
       <h2>Product designer at the Ontario Digital Service · Creating better government services</h2>
       </a>
-    </div>
+    </div> -->
 
     <section>
       <h1>Additional work</h1>
