--- a/ods.html
+++ b/ods.html
@@ -8,6 +8,10 @@
   <title>Matthew Avery Braun Soule</title>
   <link rel="stylesheet" href="style.css">
   <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <!-- All visible content is contained in the body section -->
