updated Up Next section to include PlanGrid internship and future internship opportunity in 2020

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
       <div class="container2">
         <div class="experience">
+          <!-- <p class="date">2018</p> -->
           <h3 class="experience">ARĪV</h3>
           <p class="experience">Led usability testing sessions for ARĪV, General Motors new mobility brand. Fell head over heels in love with the urban mobility design space!</p>
         </div>
@@ -131,8 +132,8 @@
       <div class="container2">
         <div class="experience">
           <!-- <p class="date">2019</p> -->
-          <h3 class="experience">Internship opportunity</h3>
-          <p class="experience">Open to internship opportunities for this upcoming Sep - Dec. I would like to  take on problems I can truly sink my heart into, and as a result, create impactful experiences.</p>
+          <h3 class="experience">Internship at PlanGrid</h3>
+          <p class="experience">Incoming UX Researcher at PlanGrid, an Autodesk company. Extremely excited to explore complex construction problem spaces!</p>
         </div>
       </div>
 
@@ -141,6 +142,14 @@
           <p class="date">2020</p>
           <h3 class="experience">Studying abroad</h3>
           <p class="experience">Studying Industrial Design at TU Delft on exchange in the Netherlands. Stoked for the bike culture, new design knowledge, and some exciting climbing excursions.</p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="experience">
+          <!-- <p class="date">2020</p> -->
+          <h3 class="experience">Internship opportunity</h3>
+          <p class="experience">Open to internship opportunities for July - August, 2020. I would like to  take on problems I can truly sink my heart into, and as a result, create impactful experiences.</p>
         </div>
       </div>
 
