--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Matthew Avery Braun Soule</title>
+    <title>Avery's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -18,7 +19,9 @@
 
   <body>
     <header class="scroll">
-      <a class="welcome morning afternoon evening" id="greeting"></a>
+      <div class="greeting">
+        <a class="welcome morning afternoon evening" id="greeting"></a>
+      </div>
       <a class="logo morning afternoon evening" href="index.html">M. Avery B. Soule</a>
     </header>
 
@@ -29,7 +32,7 @@
         <img class="cover" src="assets/images/cover3.jpg">
         <div class="overlay color3"></div>
         <h2 class="year">2016</h2>
-        <h2>Passion project · Building an all-electric daily driver</h2>
+        <h2 class="covertitle">Building an all-electric daily driver</h2>
       </a>
     </div>
 
@@ -38,19 +41,18 @@
         <img class="cover" src="assets/images/cover1.jpg">
         <div class="overlay color1"></div>
         <h2 class="year">2019</h2>
-        <h2>Passion project · Enabling athletic lifestyles for busy millennials</h2>
+        <h2 class="covertitle">Enabling athletic lifestyles for busy millennials</h2>
       </a>
     </div>
 
-<!--
     <div class="container">
       <a href="ods.html">
       <img class="cover" src="assets/images/cover2.png">
       <div class="overlay color2"></div>
       <h2 class="year">2019</h2>
-      <h2>Product designer at the Ontario Digital Service · Creating better government services</h2>
+      <h2 class="covertitle">Creating better government services @ Ontario Digital Service</h2>
       </a>
-    </div> -->
+    </div>
 
     <section>
       <h1>Additional work</h1>
