--- a/electrify.html
+++ b/electrify.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>Matthew Avery Braun Soule</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="font" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
