removed automatic download on resume

--- a/athlete.html
+++ b/athlete.html
@@ -114,7 +114,7 @@
     <h1>Learn more</h1>
     <div class="container3">
       <!-- <a class="contact footer morning afternoon evening" href="electrify.html">Electrify · Case Study</a> -->
-      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" download target="_blank">Résumé</a>
+      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" target="_blank">Résumé</a>
       <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
       <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
     </div>
