--- a/ods.html
+++ b/ods.html
@@ -29,7 +29,7 @@
   <section class="links">
     <h1>Learn more</h1>
     <div class="container3">
-      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" download target="_blank">Résumé</a>
+      <a class="contact footer morning afternoon evening" href="assets/documents/Avery_Soule_Resume.pdf" target="_blank">Résumé</a>
       <a class="contact footer morning afternoon evening" href="https://www.linkedin.com/in/mabsoule/" target="_blank">Linkedin</a>
       <a class="contact footer morning afternoon evening" href="mailto:avrysou@gmail.com">Email</a>
     </div>
