updated experience paragraphs

--- a/electrify.html
+++ b/electrify.html
@@ -28,6 +28,11 @@
   <img class="main" src="assets/images/electrify/1.jpg">
 
   <section class="spacing">
+    <h1 class="section" id="preface">Preface</h1>
+    <p class="text">On first glance, building an EV may seem like an odd case study to feature given my progression into the digital design and UX research fields. Nevertheless, I credit this high school passion project with instilling a strong interest in methodically decomposing problem spaces and working through ambiguous design challenges. These interest areas led me into the UX field in the first place and through further experiences have translated into some of my strongest skills I bring to each new problem space.</p>
+  </section>
+
+  <section class="spacing">
     <h1 class="section">On this page</h1>
     <a href="electrify.html#problem" class="nav morning afternoon evening">1. Problem</a>
     <a href="electrify.html#approach" class="nav morning afternoon evening">2. Approach</a>
@@ -410,10 +415,10 @@
     <p class="text">I’d like to thank Ryan Smith, Elle Nichols, and Greg Soule for their countless hours of help laboring on the car to ultimately make this project a success. I’d also like to thank Greg Soule and Karen Braun for trusting me with a large financial investment to make this project come to a reality. I wouldn’t be who I am today without this incredible experience.</p>
   </section>
 
-  <section class="spacing">
+  <!-- <section class="spacing">
     <h1 id="nextUp" class="section">Future interests</h1>
     <p class="text">Looking forwards, I would like to have the opportunity to apply my product design skills back into the transportation design space. Whether it be through an extension of this project, or through future internships, I would like to use a user-centered design mindset to create better transportation experiences in our modern world. This project gave me an excellent mental model of what we currently see as a traditional transportation method, driving and riding in vehicles. Now I want to push the envelope and create future methods of transportation and focus my efforts on nailing each aspect of the customer's journey. Not just creating something functional, creating something delightful and influential in the eyes of the user. <br><br> Have a challenge you think I’d be interested in? Get in touch!</p>
-  </section>
+  </section> -->
 
   <section class="links">
     <h1>Learn more</h1>
