--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a class="logo morning afternoon evening" href="index.html">M. Avery B. Soule</a>
     </header>
 
-    <p class="statement">I have a passion for exploring challenging problem spaces to create products that truly matter.</p>
+    <p class="statement">I have a passion for exploring challenging problem spaces to create products, services, and systems that truly matter.</p>
 
     <div class="container">
       <a href="electrify.html">
@@ -45,30 +45,62 @@
       </a>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <a href="ods.html">
       <img class="cover" src="assets/images/cover2.png">
       <div class="overlay color2"></div>
       <h2 class="year">2019</h2>
       <h2 class="covertitle">Creating better government services @ Ontario Digital Service</h2>
       </a>
-    </div>
+    </div> -->
 
     <section>
       <h1>Additional work</h1>
 
       <div class="container2">
         <div class="experience">
+          <p class="date">2021</p>
+          <h3 class="experience">Systems Design Engineering Degree 👨‍🎓</h3>
+          <p class="experience">Graduated from Systems Design Engineering at the University of Waterloo taking with me a strong design thinking mindset and well rounded toolbox for product, service, and systems design.</p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="experience">
+          <p class="date">2020</p>
+          <h3 class="experience">Internship at Autodesk 🏗</h3>
+          <p class="experience">Levelled up my skills as a UX Researcher while successfully managing two design projects tightly integrated with independent product teams.</p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="experience">
+          <!-- <p class="date">2019</p> -->
+          <h3 class="experience">Exchange term at TU Delft 🇳🇱</h3>
+          <p class="experience">Studied Industrial Design Engineering in Delft, Netherlands. Got stoked on the bike culture, TU Delft’s thoughtful and creative design methods, and the diverse exchange community I became a part of.</p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="experience">
           <p class="date">2019</p>
-          <h3 class="experience">Ontario Digital Service</h3>
-          <p class="experience">Found my groove as a product designer while leading a multidisciplinary team through weekly adapted Google Sprints to help redesign three major services.</p>
+          <h3 class="experience">Internship at Plangrid 🌁</h3>
+          <p class="experience">Found my groove working on impactful software products as a UX Researcher. Led both research and design activities with a multidisciplinary team to develop and launch new collaborative software functionality. Fell for San Francisco’s quirky and vibrant atmosphere and Yosemite’s monstrous walls.</p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="experience">
+          <!-- <p class="date">2019</p> -->
+          <h3 class="experience">Internship at Ontario Digital Service 📱</h3>
+          <p class="experience">Greatly enhanced my product design skillset while leading a multidisciplinary team through weekly adapted Google Sprints to help redesign three government services.</p>
         </div>
       </div>
 
       <div class="container2">
         <div class="experience">
           <p class="date">2018</p>
-          <h3 class="experience">General Motors</h3>
+          <h3 class="experience">Internship at General Motors 🚗</h3>
           <p class="experience">Designed and facilitated several design thinking workshops at GM’s innovation lab, 2908. Put together a short film about our methods.</p>
         </div>
       </div>
@@ -76,7 +108,7 @@
       <div class="container2">
         <div class="experience">
           <!-- <p class="date">2018</p> -->
-          <h3 class="experience">ARĪV</h3>
+          <h3 class="experience">ARĪV Collaboration 🚴‍♀️</h3>
           <p class="experience">Led usability testing sessions for ARĪV, General Motors new mobility brand. Fell head over heels in love with the urban mobility design space!</p>
         </div>
       </div>
@@ -84,7 +116,7 @@
       <div class="container2">
         <div class="experience">
           <p class="date">2017</p>
-          <h3 class="experience">Dynaplas</h3>
+          <h3 class="experience">Internship at Dynaplas 📐</h3>
           <p class="experience">Managed a prototyping lab to create product prototypes and manufacturing tools. Became a CAD & 3D prototyping wizard.</p>
         </div>
       </div>
@@ -92,7 +124,7 @@
       <div class="container2">
         <div class="experience">
           <p class="date">2016</p>
-          <h3 class="experience">Rhythm</h3>
+          <h3 class="experience">Rhythm 💡</h3>
           <p class="experience">Co-designed a smart home lighting system that influences the user’s circadian rhythm to encourage a healthy sleep schedule (4 month design challenge).</p>
         </div>
       </div>
@@ -100,7 +132,7 @@
       <div class="container2">
         <div class="experience">
           <p class="date">2015</p>
-          <h3 class="experience">Vessel</h3>
+          <h3 class="experience">Vessel 🚤</h3>
           <p class="experience">Transformed a rotten vintage speed boat into a modernized family ski boat. A summer of blood, sweat, and tears to actualize a dream of mine.</p>
         </div>
       </div>
@@ -108,7 +140,7 @@
       <div class="container2">
         <div class="experience">
           <p class="date">2014</p>
-          <h3 class="experience">Cooking with the Sun</h3>
+          <h3 class="experience">Cooking with the Sun ☀️</h3>
           <p class="experience">Designed an award winning hybrid parabolic solar cooker for cold climate customers. Solar seared buttery lemon-garlic scallops anyone?</p>
         </div>
       </div>
@@ -125,33 +157,17 @@
 
       <div class="container2">
         <div class="experience">
-          <p class="date">2019</p>
-          <h3 class="experience">Systems Design Engineering 3A</h3>
-          <p class="experience">Studying Systems Design Engineering at the University of Waterloo from May to August. This will be my 3A term (first semester of third year).</p>
-        </div>
-      </div>
-
-      <div class="container2">
-        <div class="experience">
-          <!-- <p class="date">2019</p> -->
-          <h3 class="experience">Internship at PlanGrid</h3>
-          <p class="experience">Incoming UX Researcher at PlanGrid, an Autodesk company. Extremely excited to explore complex construction problem spaces!</p>
-        </div>
-      </div>
-
-      <div class="container2">
-        <div class="experience">
-          <p class="date">2020</p>
-          <h3 class="experience">Studying abroad</h3>
-          <p class="experience">Studying Industrial Design at TU Delft on exchange in the Netherlands. Stoked for the bike culture, new design knowledge, and some exciting climbing excursions.</p>
+          <p class="date">2021</p>
+          <h3 class="experience">Relocating to Squamish, BC 🌲</h3>
+          <p class="experience">Moving to the outdoor recreation capital of Canada to enjoy endless granite walls, gorgeous boulders, and ‘gnarly’ (in a good way) bike trails.</p>
         </div>
       </div>
 
       <div class="container2">
         <div class="experience">
           <!-- <p class="date">2020</p> -->
-          <h3 class="experience">Internship opportunity</h3>
-          <p class="experience">Open to internship opportunities for July - August, 2020. I would like to  take on problems I can truly sink my heart into, and as a result, create impactful experiences.</p>
+          <h3 class="experience">Full Time Opportunities 👨‍💻</h3>
+          <p class="experience">Thrilled to be starting my search for full time ux research and design roles beginning fall 2021.</p>
         </div>
       </div>
 
