added project type to case studies, updated things I love word map

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img class="cover" src="assets/images/cover3.jpg">
         <div class="overlay color3"></div>
         <h2 class="year">2016</h2>
+        <h2 class="type">Passion project</h2>
         <h2 class="covertitle">Building an all-electric daily driver</h2>
       </a>
     </div>
@@ -41,6 +42,7 @@
         <img class="cover" src="assets/images/cover1.jpg">
         <div class="overlay color1"></div>
         <h2 class="year">2019</h2>
+        <h2 class="type">Passion project</h2>
         <h2 class="covertitle">Enabling athletic lifestyles for busy millennials</h2>
       </a>
     </div>
@@ -55,7 +57,7 @@
     </div> -->
 
     <section>
-      <h1>Additional work</h1>
+      <h1>Additional experience</h1>
 
       <div class="container2">
         <div class="experience">
@@ -149,7 +151,7 @@
 
     <section>
       <h1>Things I love</h1>
-      <img class="love" src="assets/images/love.png">
+      <img class="love" src="assets/images/love.jpg">
     </section>
 
     <section>
